--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -1,4 +1,49 @@
 .Login {
   background: var(--color-gray-1);
+  margin: var(--space-and-a-half) var(--space);
   min-height: 100vh;
+}
+
+.container {
+}
+
+.portal {
+  background: var(--color-white);
+  display: flex;
+  margin:  var(--pad-double);
+  box-shadow: 0 3px 6px 0 rgba(0,0,0,0.14);
+}
+
+.portal-aside {
+  flex: 10 0 50%;
+  background: url(https://s3-us-west-2.amazonaws.com/dotcom-files/white_orange_formbackground.jpg);
+  background-position: center;
+  background-size: cover;
+  padding: var(--pad-double);
+}
+
+.form-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 5 0 50%;
+  padding: var(--pad-double);
+}
+
+.icon {
+  width: 200px;
+}
+
+.form-footer {
+    padding-top: var(--pad);
+    text-align: center;
+  }
+
+.form-footer label {
+  text-align: left;
+  font-size: 12px;
+}
+
+.form-footer .button {
+  margin-top: var(--pad);
 }
