--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -29,6 +29,9 @@
 
 .form-content form {
   margin: var(--space-double) 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .logo {
@@ -48,6 +51,7 @@
 .form-footer {
     margin: var(--space);
     text-align: center;
+    width: 100%;
   }
 
 .form-footer span {
