--- a/client/src/components/signin/signin.css
+++ b/client/src/components/signin/signin.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .logo {
@@ -36,6 +37,15 @@
 .form-footer span {
   text-align: left;
   font-size: 12px;
+}
+
+.forgot-password {
+  color: var(--color-blue);
+  font-weight: 400;
+  text-align: right;
+  align-self: flex-end;
+  font-size: 12px;
+  margin-right: 8px;
 }
 
 .form-footer .button {
