--- a/client/src/components/signin/signin.css
+++ b/client/src/components/signin/signin.css
@@ -28,6 +28,11 @@
   font-weight: 500;
 }
 
+.title-subtext {
+  text-transform: uppercase;
+  font-size: var(--heading-ms2n);
+}
+
 .form-footer {
     margin: var(--space);
     text-align: center;
@@ -40,11 +45,10 @@
 }
 
 .forgot-password {
-  color: var(--color-blue);
   font-weight: 400;
   text-align: right;
   align-self: flex-end;
-  font-size: 12px;
+  font-size: var(--heading-ms2n);
   margin-right: 8px;
 }
 
