fixed forgot password button

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -227,9 +227,12 @@ h6 {
   margin: auto;
 }
 
+button {
+  color: var(--color-blue);
+}
+
 button.-inline {
     display: inline;
-    color: var(--color-blue);
     cursor: pointer;
     text-transform: inherit;
     font-size: inherit;
