--- a/client/src/styles/button.css
+++ b/client/src/styles/button.css
@@ -15,25 +15,25 @@
     background-color: white;
     margin-left: 3px;
     margin-right: 3px;
-  :hover {
-    color: var(--color-white);
-    background-color: color(var(--color-gray-4) shade(10));
-    box-shadow: 0 4px 20px 0 color(black a(10%));
-    border-color: transparent;
-  }
-  :focus, :active {
-    color: var(--color-white);
-    background-color: color(var(--color-gray-4) shade(50));
-  }
-  .-large {
-    line-height: 3rem;
-  }
-  .-loading {
-    /*@extend %hide-text;*/
-    color: transparent;
-    background-image: url('https://s3-us-west-2.amazonaws.com/galvanize.com-dev/loader-black.svg');
-    background-size: auto 70%;
-  }
+}
+.button:hover {
+  color: var(--color-white);
+  background-color: color(var(--color-gray-4) shade(10));
+  box-shadow: 0 4px 20px 0 color(black a(10%));
+  border-color: transparent;
+}
+.button:focus, .button:active {
+  color: var(--color-white);
+  background-color: color(var(--color-gray-4) shade(50));
+}
+.button.-large {
+  line-height: 3rem;
+}
+.button.-loading {
+  /*@extend %hide-text;*/
+  color: transparent;
+  background-image: url('https://s3-us-west-2.amazonaws.com/galvanize.com-dev/loader-black.svg');
+  background-size: auto 70%;
 }
 
 .primary {
@@ -43,19 +43,20 @@
     background-color: var(--bg-color);
     border: 2px solid transparent;
     border-radius: 0;
-  :hover {
-    color: var(--fg-color);
-    background-color: color(var(--bg-color) shade(10));
-  }
-  :focus, :active {
-    color: var(--fg-color);
-    background-color: color(var(--bg-color) shade(50));
-  }
-  .-loading {
-    /*@extend %hide-text;*/
-    color: transparent;
-    background-image: url('https://s3-us-west-2.amazonaws.com/galvanize.com-dev/loader-white.svg');
-    background-size: auto 70%;
-    border: 2px solid transparent;
-  }
+}
+
+.primary:hover {
+  color: var(--fg-color);
+  background-color: color(var(--bg-color) shade(10));
+}
+.primary:focus, .primary:active {
+  color: var(--fg-color);
+  background-color: color(var(--bg-color) shade(50));
+}
+.primary.-loading {
+  /*@extend %hide-text;*/
+  color: transparent;
+  background-image: url('https://s3-us-west-2.amazonaws.com/galvanize.com-dev/loader-white.svg');
+  background-size: auto 70%;
+  border: 2px solid transparent;
 }
