reworked public and private routes

--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -137,7 +137,7 @@
     overflow: visible;
   }
 
-  .nav-item .list .nav-item-subheader a {
+  .nav-item .list .nav-item-subheader>a {
     color: var(--color-black);
     font-weight: 400;
   }
