removed capital css classes

--- a/client/src/pages/dashboard/dashboard.css
+++ b/client/src/pages/dashboard/dashboard.css
@@ -1,4 +1,4 @@
-.Dashboard {
+.dashboard {
   background: var(--color-gray-1);
   margin: var(--space-and-a-half) var(--space);
   min-height: 91vh;
