--- a/client/src/styles/button.css
+++ b/client/src/styles/button.css
@@ -1,3 +1,14 @@
+button {
+  color: var(--color-blue);
+}
+
+button.-inline {
+    display: inline;
+    cursor: pointer;
+    text-transform: inherit;
+    font-size: inherit;
+}
+
 .button {
     display: inline-block;
     appearance: none;
