--- a/client/src/pages/home/_home.scss
+++ b/client/src/pages/home/_home.scss
@@ -1,13 +1,14 @@
 .home {
-  background: var(--color-gray-1);
-  margin: var(--space-and-a-half) var(--space);
+& {
+  background: $color-gray-1;
+  margin: $space-and-half $space;
   min-height: 100vh;
 }
 
 .portal {
-  background: var(--color-white);
+  background: $color-white;
   display: flex;
-  margin:  var(--space-triple);
+  margin:  $space-triple;
   box-shadow: 0 3px 6px 0 rgba(0,0,0,0.14);
 }
 
@@ -16,7 +17,7 @@
   background: url('https://s3-us-west-2.amazonaws.com/dotcom-files/white_orange_formbackground.jpg');
   background-position: center;
   background-size: cover;
-  padding: var(--pad-double);
+  padding: $pad-double;
 }
 
 .form-content {
@@ -24,5 +25,7 @@
   flex-direction: column;
   align-items: center;
   flex: 5 0 50%;
-  padding: var(--pad-double);
+  padding: $pad-double;
+}
+
 }
