--- a/client/src/styles/components/_signin.scss
+++ b/client/src/styles/components/_signin.scss
@@ -1,16 +1,18 @@
-.signup {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  flex: 5 0 50%;
-  padding: var(--pad-double);
-}
+.signin {
+  & {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 5 0 50%;
+    padding: $pad-double;
+  }
 
 .form-content form {
-  margin: var(--space-double) 0;
+  margin: $space-double 0;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .logo {
@@ -29,11 +31,10 @@
 
 .title-subtext {
   text-transform: uppercase;
-  font-size: var(--heading-ms2n);
 }
 
 .form-footer {
-    margin: var(--space);
+    margin: $space;
     text-align: center;
     width: 100%;
   }
@@ -43,6 +44,16 @@
   font-size: 12px;
 }
 
+.forgot-password {
+  color: $color-blue;
+  font-weight: 400;
+  text-align: right;
+  align-self: flex-end;
+  font-size: $heading-ms2;
+  margin-right: 8px;
+}
+
 .form-footer .button {
-  margin-top: var(--space-double);
+  margin-top: $space-double;
+}
 }
