--- a/client/src/styles/_button.scss
+++ b/client/src/styles/_button.scss
@@ -419,4 +419,6 @@ button.-inline {
     background: none;
     border: none;
     font-weight: inherit;
+    color: $color-blue;
+    vertical-align: middle;
 }
