--- a/client/src/styles/_header.scss
+++ b/client/src/styles/_header.scss
@@ -216,6 +216,7 @@
     position: relative;
     margin-left: 8px;
     margin-right: 14px;
+    display: flex;
 
     .button-nonround {
       padding: 0 12px;
