--- a/client/src/styles/components/_signin.scss
+++ b/client/src/styles/components/_signin.scss
@@ -31,6 +31,7 @@
 
 .title-subtext {
   text-transform: uppercase;
+  font-size: 12px;
 }
 
 .form-footer {
@@ -49,7 +50,7 @@
   font-weight: 400;
   text-align: right;
   align-self: flex-end;
-  font-size: $heading-ms2;
+  font-size: 12px;
   margin-right: 8px;
 }
 
