--- a/client/src/styles/pages/_home.scss
+++ b/client/src/styles/pages/_home.scss
@@ -27,6 +27,10 @@
   padding: $pad-double;
 }
 
+.logo {
+  width: 200px;
+}
+
 form, .form-group, .input-group {
   width: 100%;
 }
@@ -57,6 +61,20 @@ form {
     margin-top: $space-double;
   }
 }
+  .logo-subtext {
+    font-size: 18px;
+    margin: 0;
+  }
+
+  .portal-title {
+    margin: 32px 0 16px 0;
+    font-weight: 500;
+  }
+
+  .title-subtext {
+    text-transform: uppercase;
+    font-size: 12px;
+  }
 
 
 }
