--- a/client/src/styles/components/_header.scss
+++ b/client/src/styles/components/_header.scss
@@ -11,6 +11,7 @@
     font-family: $font-primary;
     z-index: 9999;
     position: relative;
+    overflow: visible;
   }
 
   .nav-wrapper {
@@ -18,6 +19,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    overflow: visible;
   }
 
   .nav-wrapper .galvanize-logo {
@@ -41,6 +43,7 @@
   .nav-items {
     display: flex;
     flex-wrap: wrap;
+    overflow: visible;
   }
 
   ul, li {
@@ -59,8 +62,9 @@
     transition: all 0.2s ease-in-out 0s, padding-top 0s;
     cursor: default;
     white-space: nowrap;
+    overflow: visible;
 
-    >ul {
+    >.list {
       flex-wrap: wrap;
       position: absolute;
       visibility: hidden;
@@ -71,7 +75,8 @@
       transform: translateY(-6px);
       z-index: -1;
       transition: all 0.2s ease-in-out 0s, visibility 0s linear 0.3s, display  0s linear 0.3s;
-
+      overflow: visible;
+      
       &::before {
         position: absolute;
         content: '';
@@ -126,7 +131,7 @@
       }
     }
 
-    >ul .nav-item-subheader {
+    >.list .nav-item-subheader {
       font-size: 24px;
       position: relative;
       margin-top: 12px;
@@ -140,18 +145,18 @@
         font-weight: 400;
       }
     }
-    >ul .nav-item-subheader span img {
+    >.list .nav-item-subheader span img {
       margin: 0 0 1px 6px;
       width: 16px;
       transition: transform 300ms ease;
     }
 
-    >ul .nav-item-subheader ul {
+    >.list .nav-item-subheader ul {
       margin-top: 8px;
       padding: 6px 0;
     }
 
-    >ul .nav-item-subheader ul::before {
+    >.list .nav-item-subheader ul::before {
       content: '';
       width: 90%;
       height: 1px;
@@ -246,10 +251,10 @@
 }
 
 @media (min-width: 1201px) {
-  .main-navigation-new {
+  .main-navigation {
 
     .nav-items .nav-item:first-child {
-      >  ul {
+      >.list {
         width: 750px;
       }
     }
@@ -258,6 +263,9 @@
       top: 65px;
       left: -30px;
       opacity: 0;
+    }
+    .nav-item:first-child >ul {
+      left: -250px;
     }
     .nav-item:hover, .nav-item:focus {
       background: $color-gray-1;
@@ -290,7 +298,7 @@
 }
 
 @media (max-width: 1200px) {
-  .main-navigation-new {
+  .main-navigation {
     max-height: 100vh;
     overflow-y: scroll;
     .nav-wrapper .nav-toggle {
@@ -346,7 +354,7 @@
 
 
 @media (max-width: $width-mobile) {
-  .main-navigation-new {
+  .main-navigation {
     .nav-item-subheader a {
       font-size: 20px;
     }
