--- a/client/src/styles/pages/_dashboard.scss
+++ b/client/src/styles/pages/_dashboard.scss
@@ -8,19 +8,31 @@
     margin-top: $space-triple;
   }
 
+  .portal-title {
+    margin: 32px 0 16px 0;
+    font-weight: 500;
+  }
+
+  .title-subtext {
+    font-size: 18px;
+    text-transform: none;
+    padding-left: $pad;
+  }
+
   .portal {
     background: $color-white;
     display: flex;
     flex-direction: column;
-    padding: $pad-double;
-    box-shadow: 1px 0px 1px rgba(0,0,0,0.25);
-    margin: $pad-triple 0;
+    padding: $pad-triple;
+    box-shadow: 0px 0px 1px rgba(0,0,0,0.25);
+    margin: 0 2px $pad-triple 2px;
   }
 
   .section-header h4 {
     border-bottom: 1px solid $color-brand-primary;
     padding-bottom: $pad/2;
     margin-bottom: 0;
+    font-weight: 400;
   }
 
   .section-row {
