added coding challenge instructions and styling

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -12,6 +12,8 @@
 // Pages
 @import 'styles/pages/_home.scss';
 @import 'styles/pages/_dashboard.scss';
+@import 'styles/pages/_coding-challenge.scss';
+
 
 // Components
 @import 'styles/components/_header.scss';
