--- a/client/src/styles/base/_body.scss
+++ b/client/src/styles/base/_body.scss
@@ -4,8 +4,6 @@
 *,
 *:after,
 *:before {
-  margin:0;
-  padding:0;
   box-sizing:inherit;
   border: 0;
   outline: 0;
@@ -52,18 +50,29 @@ body {
 .container {
   max-width: $container-width;
   margin: auto;
+  margin-top: $space-triple;
 }
 
 .font-secondary {
   font-family: $font-secondary;
 }
 
-.section.-white {
-  background: white;
+.portal-title {
+  margin: 32px 0 16px 0;
+  font-weight: 500;
 }
 
-.section-thin {
-  padding: 0;
-  position: relative;
-  background: $color-gray-1;
+.title-subtext {
+  font-size: 18px;
+  text-transform: none;
+  padding-left: $pad;
+}
+
+.portal-inner {
+  background: $color-white;
+  display: flex;
+  flex-direction: column;
+  padding: $pad-triple;
+  box-shadow: 0px 0px 1px rgba(0,0,0,0.25);
+  margin: 0 2px $pad-triple 2px;
 }
