code mirror in component

--- a/client/src/styles/pages/_coding-challenge.scss
+++ b/client/src/styles/pages/_coding-challenge.scss
@@ -44,6 +44,10 @@
 
     .code-editor {
       flex: 2;
+
+      .editor-wrapper {
+        border-bottom: 1px solid $color-gray-2;
+      }
     }
   }
 
