--- a/client/src/styles/pages/_coding-challenge.scss
+++ b/client/src/styles/pages/_coding-challenge.scss
@@ -25,8 +25,8 @@
 
       ol li {
         margin-bottom: 1rem;
-        font-size: 18px;
-        line-height: 27px;
+        font-size: 16px;
+        line-height:22px;
       }
        ul {
          list-style: none;
@@ -38,7 +38,7 @@
           border: 1px solid $color-gray-2;
           border-radius: 3px;
           margin: 0 1px;
-          font-size: 16px;
+          font-size: 12px;
        }
     }
 
@@ -46,7 +46,10 @@
       flex: 2;
 
       .editor-wrapper {
-        border-bottom: 1px solid $color-gray-2;
+
+        .react-codemirror2 {
+          border-bottom: 1px solid $color-gray-2;
+        }
       }
 
       .action {
