styling for passing works

--- a/client/src/styles/pages/_coding-challenge.scss
+++ b/client/src/styles/pages/_coding-challenge.scss
@@ -40,6 +40,10 @@
           margin: 0 1px;
           font-size: 12px;
        }
+
+       .-pass {
+         color: $color-green;
+       }
     }
 
     .code-editor {
