initial multi opp styling

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -19,3 +19,4 @@
 @import 'styles/components/_header.scss';
 @import 'styles/components/_signin.scss';
 @import 'styles/components/_signup.scss';
+@import 'styles/components/_dashboard-opportunity-list.scss';
