--- a/client/src/styles/pages/_dashboard.scss
+++ b/client/src/styles/pages/_dashboard.scss
@@ -14,6 +14,12 @@
   .program-select {
     background: $color-gray-1;
     padding: $pad;
+
+    .citation {
+      font-style: italic;
+      font-size: 14px;
+      margin-top: $space-triple;
+    }
   }
 
   .section-row {
