--- a/client/src/styles/components/_dashboard-opportunity-list.scss
+++ b/client/src/styles/components/_dashboard-opportunity-list.scss
@@ -64,6 +64,7 @@
 
   .steps-list .steps {
     display: flex;
+    justify-content: center;
     padding: 0;
   }
 
@@ -73,6 +74,7 @@
     flex-direction: column;
     align-items: center;
     flex: 1;
+    max-width: 275px;
 
     .label {
       margin: $space 0;
