dashboard block to link to coding challenge

--- a/client/src/assets/styles/base/_body.scss
+++ b/client/src/assets/styles/base/_body.scss
@@ -49,7 +49,7 @@ body {
 .container {
   max-width: $container-width;
   margin: auto;
-  margin-top: $space-triple;
+  overflow: hidden;
 }
 
 .font-secondary {
