--- a/client/src/assets/styles/base/_body.scss
+++ b/client/src/assets/styles/base/_body.scss
@@ -71,7 +71,7 @@ body {
   background: $color-white;
   display: flex;
   flex-direction: column;
-  padding: $pad-triple;
+  padding: $pad-double;
   box-shadow: 0px 0px 1px rgba(0,0,0,0.25);
   margin: 0 2px $pad-triple 2px;
 }
