--- a/client/src/assets/styles/pages/_coding-challenge.scss
+++ b/client/src/assets/styles/pages/_coding-challenge.scss
@@ -1,4 +1,11 @@
 .coding-challenge {
+
+  .page-title {
+    font-weight: 500;
+    text-align: center;
+    margin-top: $space-triple;
+  }
+  
   .portal-inner >.challenge-editor {
     display: flex;
     margin-top: $space-double;
