--- a/client/src/assets/styles/pages/_dashboard.scss
+++ b/client/src/assets/styles/pages/_dashboard.scss
@@ -5,11 +5,11 @@
     overflow:auto;
 }
 
-  .section-header h4 {
-    padding-bottom: $pad/2;
-    margin-bottom: 0;
-    font-weight: 400;
-  }
+.page-title {
+  font-weight: 500;
+  text-align: center;
+  margin-top: $space-triple;
+}
 
   .program-select {
     background: $color-gray-1;
