added if no scorecard logic

--- a/client/src/assets/styles/_variables.scss
+++ b/client/src/assets/styles/_variables.scss
@@ -7,7 +7,7 @@
 $color-brand-primary: #F79020;
 $color-brand-secondary: #777879;
 
-/* accent colors for logo */
+$color-hr-blue: #0097E3;
 
 $color-blue: #41B6C5;
 $color-blue-dark: #003B4C;
