--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -20,3 +20,4 @@
 @import './assets/styles/components/_signin.scss';
 @import './assets/styles/components/_signup.scss';
 @import './assets/styles/components/_dashboard-opportunity-list.scss';
+@import './assets/styles/components/_next-steps.scss';
