--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,6 +13,7 @@
 @import './assets/styles/pages/_home.scss';
 @import './assets/styles/pages/_dashboard.scss';
 @import './assets/styles/pages/_coding-challenge.scss';
+@import './assets/styles/pages/_book-interview.scss';
 
 
 // Components
